--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "history": "^5.0.0",
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
+    "react-test-renderer": "^17.0.2",
     "webpack-dev-server": "^3.9.0"
   },
   "bugs": {
