--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.14.3",
     "history": "^5.0.0",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^1.19.1",
     "react-test-renderer": "^17.0.2",
     "webpack-dev-server": "^3.9.0"
